<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignInActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registrate"
        android:textSize="30sp"
        android:padding="15dp"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="60dp"
        />

    <EditText
        android:id="@+id/etrEmail"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:hint="@string/correo"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        />

    <EditText
        android:id="@+id/etrPassword"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        />

    <EditText
        android:id="@+id/etrConfirmPassword"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:inputType="textPassword"
        android:hint="@string/confirm_password"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        />

    <TextView
        android:id="@+id/tvrError"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textColor="@color/rojo"
        android:textSize="20sp"
        android:visibility="invisible"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textSize="20sp"
        android:layout_gravity="center"
        />

</LinearLayout>