<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imagenRedonda"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/hk"
        android:scaleType="centerCrop"
        android:background="@drawable/circular"
        android:layout_gravity="center"
        android:padding="2dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="15dp"/>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:textSize="15sp"
        android:hint="@string/correo"
        android:layout_marginBottom="20dp"
        />



    <EditText
        android:id="@+id/etPassword"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:textSize="15sp"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:layout_marginBottom="20dp"
        />

    <TextView
        android:id="@+id/tvError"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:textColor="red"
        android:visibility="invisible"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter"
        android:textSize="15sp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        />

    <Button
        android:id="@+id/btnGoRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:background="@android:color/transparent"
        />

</LinearLayout>